# logistic_sgd

./: .gitignore  CMakeLists.txt  command  problem.cpp  problem.h
Communication/: p2p_communication.h  reduce_operator.h  ring_allreduce.h  simple_allreduce.h
cluster/: SGD.sh  hostfile  logSGD.conf
include/: common.h  logistic_sgd.h  neighbors.h  prob.h  properties.h  string_util.h  type_convert.h
local/: SGD.sh  logSGD.conf
src/: logistic_sgd.cpp  main.cpp  neighbors.cpp  prob.cpp  properties.cpp  string_util.cpp  type_convert.cpp
utils/: utils.cpp  utils.h
zq4000/: SGD.sh  logSGD.conf
zq4000/result/: sptest.err  sptest.out
